--- a/p-84pre-c1.html
+++ b/p-84pre-c1.html
@@ -5,4 +5,4 @@ window.__mirage2 = {petok:"DmA8gKzMHY716UX5_zJYH_IiLQfVFmHfN8Gu61E7Ltc-1800-0.0.
 //]]>
 </script>
 <script type="text/javascript" src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-<img id="gpc-GreatPages-logo" data-cfsrc="https://cdn.greatapps.com.br/_greatpages/imagens/logo.png" style="display:none;visibility:hidden;"><noscript><img id="gpc-GreatPages-logo" src="https://cdn.greatapps.com.br/_greatpages/imagens/logo.png"></noscript><span id="gpc-GreatPages-texto"><span id="gpc-GreatPages-feito_por">Feito com</span><span id=""><b>Great</b>Pages</span></span></a></body></html>
+<img id="gpc-GreatPages-logo" data-cfsrc="https://cdn.greatapps.com.br/_greatpages/imagens/logo.png" style="display:none;visibility:hidden;"><span id=""><b</b></span></span></a></body></html>
